Fixes some dark mode issues. Fixes some v2 site

--- a/v2/site/docs/.vitepress/theme/custom.css
+++ b/v2/site/docs/.vitepress/theme/custom.css
@@ -56,6 +56,17 @@
 .text-center {
   text-align: center;
 }
+
+.m0,
+h1.m0,
+h2.m0,
+h3.m0,
+h4.m0,
+h5.m0,
+h6.m0 {
+  margin: 0;
+}
+
 /*
   Margin block start (mbs) utility classes
   Maps to --ag-space-1 through --ag-space-8
